# ipc_core

./: .gitignore  CMakeLists.txt  CONTRIBUTING  INSTALL.md  README.md
src/: CMakeLists.txt
src/ipc/: common.cpp  common.hpp
src/ipc/detail/: common.hpp
src/ipc/detail/macros/: log_component_enum_declare.macros.hpp
src/ipc/test/: test_common_util.cpp  test_common_util.hpp  test_config.cpp  test_config.hpp  test_fake_object.hpp  test_file_util.cpp  test_file_util.hpp  test_logger.hpp
src/ipc/transport/: asio_local_stream_socket.cpp  asio_local_stream_socket.hpp  asio_local_stream_socket_fwd.hpp  bipc_mq_handle.cpp  bipc_mq_handle.hpp  blob_stream_mq.hpp  blob_stream_mq_rcv.hpp  blob_stream_mq_snd.hpp  blob_transport.hpp  channel.cpp  channel.hpp  error.cpp  error.hpp  native_handle_transport.hpp  native_socket_stream.cpp  native_socket_stream.hpp  native_socket_stream_acceptor.cpp  native_socket_stream_acceptor.hpp  persistent_mq_handle.hpp  posix_mq_handle.cpp  posix_mq_handle.hpp  protocol_negotiator.cpp  protocol_negotiator.hpp  transport_fwd.hpp
src/ipc/transport/detail/: asio_local_stream_socket.cpp  asio_local_stream_socket.hpp  asio_local_stream_socket_fwd.hpp  blob_stream_mq_impl.hpp  blob_stream_mq_rcv_impl.hpp  blob_stream_mq_snd_impl.hpp  native_socket_stream_impl.cpp  native_socket_stream_impl.hpp  transport_fwd.hpp
src/ipc/transport/sync_io/: blob_stream_mq_rcv.hpp  blob_stream_mq_snd.hpp  blob_transport.hpp  native_handle_transport.hpp  native_socket_stream.cpp  native_socket_stream.hpp  native_socket_stream_acceptor.cpp  native_socket_stream_acceptor.hpp
src/ipc/transport/sync_io/detail/: async_adapter_rcv.hpp  async_adapter_snd.hpp  blob_stream_mq_rcv_impl.hpp  blob_stream_mq_snd_impl.hpp  native_socket_stream_impl.cpp  native_socket_stream_impl.hpp  native_socket_stream_impl_rcv.cpp  native_socket_stream_impl_snd.cpp
src/ipc/util/: default_init_allocator.hpp  native_handle.cpp  native_handle.hpp  process_credentials.cpp  process_credentials.hpp  process_credentials_fwd.hpp  shared_name.cpp  shared_name.hpp  shared_name_fwd.hpp  use_counted_object.cpp  use_counted_object.hpp  util.cpp  util_fwd.hpp
src/ipc/util/detail/: util.cpp  util.hpp  util_fwd.hpp
src/ipc/util/sync_io/: asio_waitable_native_hndl.cpp  asio_waitable_native_hndl.hpp  sync_io_fwd.hpp
src/ipc/util/sync_io/detail/: timer_ev_emitter.cpp  timer_ev_emitter.hpp
test/basic/: CMakeLists.txt
test/basic/link_test/: CMakeLists.txt  main.cpp
